--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,12 @@ section {
     display: inline-block;
 }
 
+.navbar__menu .item-active-class {
+    background: rgba(0,13,80,1);
+    color: #eee !important;
+    font-style: italic;
+}
+
 .navbar__menu .menu__link {
     display: block;
     padding: 1em;
@@ -195,7 +201,7 @@ section:nth-of-type(3n + 1) .landing__container::after {
 /* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
 section.your-active-class {
     background: rgb(0, 0, 0);
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
 }
 
 section.your-active-class .landing__container::before {
