--- a/css/styles.css
+++ b/css/styles.css
@@ -234,3 +234,16 @@ section.your-active-class .landing__container::after {
 		           rotate(-360deg);
 	}
 }
+
+#btnBackTop {
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+    width: 150px;
+    height: 50px;
+    background: rgb(0,13,80);
+    color: #FFF;
+    font-weight: bold;
+    font-size: 17px;
+    display: none;
+}
